File index.html modified

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pablo Jordan - Portfolio Profesional</title>
     <style>
-        /* Estilos básicos para que se vea ordenado */
         body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; background-color: #f4f4f4; }
         header, section, footer { background: #fff; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
         h1, h2 { color: #333; }
@@ -14,47 +13,45 @@
         li { margin-bottom: 10px; }
         .skill-list li { background: #e9e9e9; padding: 5px 10px; border-radius: 4px; display: inline-block; margin-right: 10px; }
         footer { text-align: center; font-size: 0.9em; color: #666; }
-    </style
+    </style>
 </head>
 <body>
 
-    <!-- Encabezado con tu nombre y título -->
     <header>
         <h1>¡Hola! Soy Pablo Mateo Jordan Torres</h1>
         <p>Desarrollador Web</p>
-        <p>Un profesional apasionado por la innovacion continua y la tecnologia</p
+        <p>Un profesional apasionado por la innovación continua y la tecnología</p>
     </header>
 
-    <!-- Sección "Acerca de Mí" -->
     <section id="about">
         <h2>Acerca de Mí</h2>
-        <p>Soy un profesional con 1 años de experiencia en Front-end. Mi objetivo es ganar experiencia en multiples sectores. Me especializo en React y Java, siempre buscando soluciones creativas y eficientes. Me encanta el mundo de las automatizaciones y estoy siempre aprendiendo.</p
+        <p>
+            Soy un profesional con 1 año de experiencia en Front-end.
+            Mi objetivo es ganar experiencia en múltiples sectores.
+            Me especializo en React y Java, siempre buscando soluciones creativas y eficientes.
+        </p>
     </section>
 
-    <!-- Sección de Habilidades Clave -->
     <section id="skills">
         <h2>Mis Habilidades</h2>
         <ul class="skill-list">
             <li>HTML5 & CSS3</li>
-            <li>JavaScript React</li>
+            <li>JavaScript / React</li>
             <li>Marketing Digital</li>
             <li>Idiomas: Español (Nativo), Inglés (Avanzado)</li>
         </ul>
     </section>
 
-
-    <!-- Sección de Contacto -->
     <section id="contact">
         <h2>Contáctame</h2>
         <p>¿Interesado en colaborar? ¡Hablemos!</p>
-        <p>Email: <a href="pablomjordan17@gmail.com">pablomjordan17@gmail.com</a></p
-        <p>GitHub: <a href="https://github.com/pablomjordan17" target="_blank">github.com/pablomjordan17</a></p
-    </section
+        <p>Email: <a href="mailto:pablomjordan17@gmail.com">pablomjordan17@gmail.com</a></p>
+        <p>GitHub: <a href="https://github.com/pablomjordan17" target="_blank">github.com/pablomjordan17</a></p>
+    </section>
 
-    <!-- Pie de página -->
     <footer>
-        <p>&copy; 2026 Creado por [Tu Nombre]</p>
+        <p>&copy; 2026 Creado por Pablo Jordan</p>
     </footer>
 
 </body>
-</html> 
+</html>
